--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
