--- a/nginx.conf
+++ b/nginx.conf
@@ -90,7 +90,7 @@ http {
 
   keepalive_timeout 5;
 
-      force https-redirects
+      # force https-redirects
       if ($scheme = http) {
           return 301 https://$server_name$request_uri;
       }
